tests/ui/consts/const-eval/ub-incorrect-vtable.32bit.stderr
error[E0080]: constructing invalid value: encountered ALLOC2<imm>, but expected a vtable pointer
  --> $DIR/ub-incorrect-vtable.rs:19:14
   |
LL |     unsafe { std::mem::transmute((&92u8, &[0usize, 1usize, 1000usize])) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `INVALID_VTABLE_ALIGNMENT` failed here

error[E0080]: constructing invalid value: encountered ALLOC3<imm>, but expected a vtable pointer
  --> $DIR/ub-incorrect-vtable.rs:23:14
   |
LL |     unsafe { std::mem::transmute((&92u8, &[1usize, usize::MAX, 1usize])) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `INVALID_VTABLE_SIZE` failed here

error[E0080]: constructing invalid value at .0: encountered ALLOC4<imm>, but expected a vtable pointer
  --> $DIR/ub-incorrect-vtable.rs:32:14
   |
LL |     unsafe { std::mem::transmute((&92u8, &(drop_me as fn(*mut usize), 1usize, 1000usize))) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `INVALID_VTABLE_ALIGNMENT_UB` failed here

error[E0080]: constructing invalid value at .0: encountered ALLOC5<imm>, but expected a vtable pointer
  --> $DIR/ub-incorrect-vtable.rs:36:14
   |
LL |     unsafe { std::mem::transmute((&92u8, &(drop_me as fn(*mut usize), usize::MAX, 1usize))) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `INVALID_VTABLE_SIZE_UB` failed here

error[E0080]: constructing invalid value at .0: encountered ALLOC6<imm>, but expected a vtable pointer
  --> $DIR/ub-incorrect-vtable.rs:41:14
   |
LL |     unsafe { std::mem::transmute((&92u8, &(drop_me as fn(*mut usize), 1usize, 1usize))) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `INVALID_VTABLE_UB` failed here

error[E0080]: constructing invalid value at .1: encountered a dangling reference (going beyond the bounds of its allocation)
  --> $DIR/ub-incorrect-vtable.rs:86:1
   |
LL | const G: Wide = unsafe { Transmute { t: FOO }.u };
   | ^^^^^^^^^^^^^ it is undefined behavior to use this value
   |
   = note: the rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 8, align: 4) {
               ╾ALLOC0<imm>╼ ╾ALLOC1╼                         │ ╾──╼╾──╼
           }

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0080`.
